[metadata]
name = git-nit
summary = Tool to simplify making minor changes to patches in gerrit
description-file = README.rst
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = git gerrit review
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://git.openstack.org/cgit/openstack/git-nit
project-url = http://git.openstack.org/cgit/openstack/git-nit

[files]
packages =
    git_nit

[entry_points]
console_scripts =
    git-nit = git_nit.cmd:main

[wheel]
universal = 1
